--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,12 +1,83 @@
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
+html,
+body {
+  height: 90vh;
+  width: 100%;
+  margin: 0;
+  padding-top: 1vh;
+  background-color: #68411c;
+}
+
+input,
+select {
+  margin-bottom: 8px;
+  padding-left: 3px;
+  background-color: #f3d7a4;
+}
+
+h1 {
+  margin: 0;
+}
+
+.right {
+  width: 30%;
+  float: right;
+  padding-right: 30%;
+}
+
+.left {
+  width: 30%;
+  float: left;
+}
+
+#main {
+  padding-top: 5vh;
+  padding-left: 5vh;
+  padding-right: 5vh;
+  height: 90vh;
+  width: 690px;
+  margin: 0 auto;
+  box-shadow: 2px 2px 10px black;
+  -webkit-box-shadow: 2px 2px 10px black;
+  -moz-box-shadow: 2px 2px 10px black;
+  background-color: #ffd685;
+}
+
+#stats {
+  width: 50px;
+  height: 300px;
+}
+
+#stats input {
+  width: 50px;
+  margin-bottom: 2px;
+  text-align: center;
+}
+
+#stats label {
+  display: inline-block;
+  width: 50px;
+  text-align: center;
+  margin-bottom: 6px;
+}
+
+#langs {
+  min-width: 467px;
+}
+
+#charDetails {
+  height: 300px;
+}
+
+#stat_block {
+  padding-left: 20px;
+}
+
 #content {
-    margin-top: 100px;
-    font-size: 2em;
-    text-align: center;
-  }
+  margin-top: 20px;
+  font-size: 1.5em;
+  text-align: left;
+}
+
+#trait1, #trait2, #ideal, #bond, #flaw {
+  width: 500px;
+}
